--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
         "babel-plugin-transform-scss": "^1.1.0",
         "browserify": "^17.0.0",
         "express": "^4.12.3",
-        "postgres": "^3.0.5",
+        "pg": "^8.7.3",
+        "postgres": "^3.0.6",
         "prop-types": "^15.6.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
@@ -36,6 +37,8 @@
         "concurrently": "^6.0.2",
         "cross-env": "^7.0.3",
         "css-loader": "^6.7.1",
+        "eslint": "^8.13.0",
+        "eslint-plugin-react": "^7.29.4",
         "html-webpack-plugin": "^5.5.0",
         "isomorphic-fetch": "^3.0.0",
         "nodemon": "^2.0.7",
