--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "license": "ISC",
     "dependencies": {
         "babel-plugin-transform-scss": "^1.1.0",
+        "bcrypt": "^5.0.1",
         "browserify": "^17.0.0",
         "browserify-zlib": "^0.2.0",
         "express": "^4.12.3",
