CRUD functionin for employees

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "bcrypt": "^5.0.1",
         "browserify": "^17.0.0",
         "browserify-zlib": "^0.2.0",
+        "cookie-parser": "^1.4.6",
         "express": "^4.12.3",
         "pg": "^8.7.3",
         "postgres": "^3.0.6",
